--- a/app.yaml
+++ b/app.yaml
@@ -1,9 +1,8 @@
 runtime: python37
-api_version: 1
 
 handlers:
 - url: /static
   static_dir: app/static
 - url: /.*
-  script: main.app
+  script: auto
 
